--- a/css/leno.css
+++ b/css/leno.css
@@ -107,6 +107,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
+  cursor: pointer;
 }
 
 .header .links .icon span {
@@ -120,7 +121,7 @@ body {
 }
 
 .header .links .icon span:nth-child(2) {
-  width: 60%;
+  width: 100%;
   transition: 0.3;
   -webkit-transition: 0.3;
   -moz-transition: 0.3;
@@ -153,10 +154,6 @@ body {
   position: absolute;
   right: 5px;
   top: -20px;
-}
-
-.header .links:hover ul {
-  display: block;
 }
 
 .header .links ul li a {
@@ -236,6 +233,7 @@ body {
 .features .feat i {
   color: var(--main-color);
   margin-top: 34px;
+  cursor: pointer;
 }
 
 .features .feat h3 {
@@ -279,6 +277,7 @@ body {
 .services .services-content .srv i {
   color: var(--main-color);
   flex-basis: 60px;
+  cursor: pointer;
 }
 
 .services .services-content .srv .text {
@@ -351,6 +350,7 @@ body {
 
 .portfolio .portfolio-content .card .info h3 {
   margin: 0;
+  cursor: pointer;
 }
 
 .portfolio .portfolio-content .card .info p {
@@ -486,6 +486,7 @@ body {
 
 .contact .info .social i {
   margin-left: 10px;
+  cursor: pointer;
   color: var(--secondary-color);
 }
 
